--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -4,6 +4,9 @@ jobs:
   build:
     name: Build Image
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - name: Check out code
       uses: actions/checkout@v2
