--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -28,7 +28,9 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
   deploy:
+    needs: build
     steps:            
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1 # Configure with AWS Credentials
