--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -31,6 +31,11 @@ jobs:
 
   deploy:
     needs: build
+    runs-on: ubuntu-latest
+    environment: ex3env
+    permissions:
+      id-token: write
+      contents: read
     steps:            
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1 # Configure with AWS Credentials
