--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -22,12 +22,12 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: ${ public.ecr.aws/a2o6r0l6 }
-        ECR_REPOSITORY: chrisou
-        IMAGE_TAG: chrisou_image
+        #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        #ECR_REPOSITORY: chrisou
+        IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -t public.ecr.aws/a2o6r0l6/chrisou:$IMAGE_TAG .
+        docker push public.ecr.aws/a2o6r0l6/chrisou:$IMAGE_TAG
 
   deploy:
     needs: build
