--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -20,18 +20,14 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-      with:
-        registry: public.ecr.aws
-        username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Build, tag, and push image to Amazon ECR
       env:
-        #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        #ECR_REPOSITORY: chrisou
-        IMAGE_TAG: ${{ github.sha }}
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: chrisou
+        IMAGE_TAG: chrisou_image
       run: |
-        docker build -t public.ecr.aws/a2o6r0l6/chrisou:$IMAGE_TAG .
-        docker push public.ecr.aws/a2o6r0l6/chrisou:$IMAGE_TAG
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   deploy:
     needs: build
