--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -16,20 +16,24 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: ${{ secrets.AWS_REGION }}
     - name: Login to Public ECR
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with: 
         registry: public.ecr.aws
         username: ${{ secrets.AWS_ACCESS_KEY_ID }}
         password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Push to ECR
-      env:
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        docker build -t public.ecr.aws/a2o6r0l6/chrisou:$IMAGE_TAG .
-        docker build -t public.ecr.aws/a2o6r0l6/chrisou:latest .
-        docker push --all-tags public.ecr.aws/a2o6r0l6/chrisou
+      env: 
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+    - run: docker build --tag project2:another .
+    - name: Push to ECR
+      id: ecr
+      uses: jwalton/gh-ecr-push@v1
+      with:
+        access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        region: ${{ secrets.AWS_REGION }}
+        image: project2:another
 
         
 
