--- a/.github/workflows/github-actions-deployment.yml
+++ b/.github/workflows/github-actions-deployment.yml
@@ -46,7 +46,8 @@ jobs:
         uses: awslabs/amazon-app-runner-deploy@main # Deploy app runner service
         with:
           service: app-runner-image-deploy-service
-          image: ${{ steps.build-image.outputs.image }}          
+          image: ${{ steps.build-image.outputs.image }}  
+          access-role-arn: ${{ secrets.ROLE_ARN }}
           runtime: NODEJS_12          
           region: ${{ secrets.AWS_REGION }}
           cpu : 1
